# gerty

./: .coderabbit.yaml  .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile.agent  Dockerfile.server  LICENSE  Makefile  README.md  SECURITY.md  TESTING_VALIDATION.md  go.mod  pyproject.toml  sonar-project.properties
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yaml  codeql.yaml  docs.yaml  mutation.yaml  semgrep.yaml  semgrep.yml  sonarcloud.yaml
cmd/agent/: main.go
cmd/cli/: annotate.go  annotate_test.go  client.go  client_test.go  discover.go  format.go  format_test.go  main.go  pr.go  pr_test.go  recommend.go  report.go  workloads.go
cmd/server/: main.go
deploy/dashboards/: README.md  datadog-gerty-escalation.json  grafana-gerty-escalation.json  newrelic-gerty-escalation.json  otel-collector.yaml
deploy/grafana/: gerty-dashboard.json  k8s-sage-dashboard.json
docs/: ARCHITECTURE.md  CLAUDE_CODE_DATA_EXPANSION_PROMPT.md  DATA_EXPANSION_SCRAPE_PLAN.md  DAY3_STATUS_REPORT.md  DAY4_PLAN.md  DAY4_STATUS_REPORT.md  L1_RULES_ENGINE_FIXES.md  L2_RULES_ENGINE_FIXES.md  MARKETPLACE_DEPLOYMENT.md  MODEL_DESIGN.md  TESTING_RIG_RUNBOOK.md  TRAINING_DATA.md  UX_RECOMMENDATION_FLOW.md  architecture.md  cli.md  configuration.md  getting-started.md  how-it-works.md  index.md  manifesto.md  package-lock.json  package.json  pricing.md
docs/.vitepress/: config.mts
docs/kubernetes-failure-stories/: README.md
docs/medium/: civis.txt  danveloper.txt  extracted_postmortems.txt  flexera.txt  gke-cost-advice.txt  istio.txt  jwplayer.txt  komodor-cost.txt  mindtickle.txt  nodedrain.txt  omio.txt  prepl.txt  randoli.txt  reddit.txt  saltside.txt  skyscanner.txt  skyscanner2.txt
docs/public/: CNAME
internal/agent/: collector.go  collector_test.go  kubelet.go  kubelet_test.go  pusher.go  pusher_test.go  reporter.go  reporter_test.go  resources.go  resources_test.go  store.go  store_test.go
internal/gitops/: argocd.go  (+3 more)
ml/: README.md
scripts/: eval_and_deploy.sh  kind-cluster.sh  run-scale-test.sh  setup-dev.sh  train.sh
(+126 files in other folders)
